--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
   </style>
 </head>
 <body>
-  <img src="Note.png" alt="Note">
+  <img src="Note.png" alt="Note.png">
   
   <audio controls autoplay loop>
     <source src="flowers.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </body>
+
 </html>
