--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   </style>
 </head>
 <body>
-  <img src="Note.png" alt="Note.png">
-  
+  <header class="header">
+      <div class="left-section">
+        <img class="note.png" src="note.png">
+      </div>
   <audio controls autoplay loop>
     <source src="flowers.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
@@ -25,3 +27,4 @@
 </body>
 
 </html>
+
