--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header class="header">
-      <div class="left-section">
+      <div>
         <img class="note.png" src="note.png">
       </div>
   <audio controls autoplay loop>
@@ -27,4 +27,5 @@
 </body>
 
 </html>
+
 
